gcc/testsuite/rust/rustc/ui/parser/diff-markers/unclosed-delims.rs
mod tests {
    #[test]
<<<<<<< HEAD
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-note "" "" { target *-*-* } .-2 }

// { dg-note "" "" { target *-*-* } .-4 }
// { help "" "" { target *-*-* } .-5 }
// { dg-note "" "" { target *-*-* } .-6 }

    fn test1() {
=======
// { dg-note "" "" { target *-*-* } .-1 }
    fn test2() {
>>>>>>> 7a4f13c blah blah blah
// { dg-note "" "" { target *-*-* } .-1 }
    }
}

